Fix overflowing action buttons in survey designer (#6325)
This only affects the checkbox group widget. Previously,
it had a `white-space: nowrap` set which pushed the actions
outside of the visible area.

--- a/indico/web/client/styles/modules/_event_management.scss
+++ b/indico/web/client/styles/modules/_event_management.scss
@@ -670,6 +670,10 @@ form.horizontal .clone-event-dialog-content {
   }
 }
 
+.clone-event-dialog-content #form-group-selected_items .form-field {
+  width: 100%;
+}
+
 .clone-event-dialog-content ul.steps {
   margin-bottom: 30px;
 }
