--- a/indico/web/client/styles/partials/_inputs.scss
+++ b/indico/web/client/styles/partials/_inputs.scss
@@ -346,7 +346,7 @@ $dropdown-transition: $dropdown-transition-step ease-out;
   }
 
   span.checkbox-label {
-    white-space: nowrap;
+    display: flex;
   }
 }
 
